# rust-actix-api

./: Cargo.toml  Dockerfile
charts/rust-actix-api/: Chart.yaml  values.yaml
charts/rust-actix-api/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml
charts/rust-actix-api/templates/tests/: test-connection.yaml
src/: main.rs
src/handlers/: echo.rs  hello.rs  mod.rs
