[package]
name = "rust-actix-api"
version = "0.1.0"
authors = ["Stii <stiipretorius@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
serde = "1.0.112"
serde_json = "1.0.55"